@@ -2,4 +2,5 @@ ADD_SUBDIRECTORY(chat)
 ADD_SUBDIRECTORY(complexpingpong)
 ADD_SUBDIRECTORY(listnames)
 ADD_SUBDIRECTORY(pingpong)
+ADD_SUBDIRECTORY(remotecontrolledcar)
 
